@@ -389,7 +389,10 @@ object Isabelle {
       val sel_ranges = JEdit_Lib.selection_ranges(text_area)
       val caret_range = JEdit_Lib.caret_range(text_area)
       val ranges = if (sel_ranges.isEmpty) List(caret_range) else sel_ranges
-      for (info <- rendering.markup_structure(Rendering.structure_elements, ranges)) {
+      val infos =
+        rendering.markup_structure(Rendering.structure_elements, ranges,
+          filter = markup => !sel_ranges.exists(r => r.contains(markup.range)))
+      for (info <- infos) {
         text_area.addToSelection(new Selection.Range(info.range.start, info.range.stop))
       }
     }
